--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-norm-func-name: orgstrap-norm-func--dprp-1-0; orgstrap-block-checksum: 60dd95bde306a314a45b0c309649e2791fba7d66b8f2def9c35d25714b7c2668; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-norm-func-name: orgstrap-norm-func--dprp-1-0; orgstrap-block-checksum: 5848dfa705815f0145c2453a8b9162a0c879b462027018d70db0b88506974afb; -*-
 # [[orgstrap][jump to orgstrap block for this file]]
 #+title: Orgstrap: Executable Org files
 #+startup: showall
@@ -26,13 +26,11 @@
 
 #+name: orgstrap-shebang
 #+begin_src bash :eval never :results none :exports none
-{ __p=$(mktemp -d);touch ${__p}/=;chmod +x ${__p}/=;__op=$PATH;PATH=${__p}:$PATH;} > ${null="/dev/null"}
-$file= $MyInvocation.MyCommand.Source
-$ErrorActionPreference= "SilentlyContinue"
-file=$0
-args=
-$ErrorActionPreference= "Continue"
-{ PATH=$__op;rm ${__p}/=;rmdir ${__p};} > $null
+set -e "-C" "-e" "-e"
+{ null=/dev/null;} > "${null:=/dev/null}"
+{ args=;file=;MyInvocation=;__p=$(mktemp -d);touch ${__p}/=;chmod +x ${__p}/=;__op=$PATH;PATH=${__p}:$PATH;} > "${null}"
+$file = $MyInvocation.MyCommand.Source
+{ file=$0;PATH=$__op;rm ${__p}/=;rmdir ${__p};} > "${null}"
 emacs -batch -no-site-file -eval "(let (vc-follow-symlinks) (defun orgstrap--confirm-eval (l _) (not (memq (intern l) '(elisp emacs-lisp)))) (let ((file (pop argv)) enable-local-variables) (find-file-literally file) (end-of-line) (when (eq (char-before) ?\^m) (let ((coding-system-for-read 'utf-8)) (revert-buffer nil t t)))) (let ((enable-local-eval t) (enable-local-variables :all) (major-mode 'org-mode)) (require 'org) (org-set-regexps-and-options) (hack-local-variables)))" "${file}" -- ${args} "${@}"
 exit
 <# powershell open
@@ -1651,7 +1649,7 @@ which is not present in the versions of Org released with Emacs < 26.
 
 # XXX must keep this in sync manually to support old versions of org
 #+name: orgstrap-shebang-body
-: "{ __p=$(mktemp -d);touch ${__p}/=;chmod +x ${__p}/=;__op=$PATH;PATH=${__p}:$PATH;} > ${null=\"/dev/null\"}\n$file= $MyInvocation.MyCommand.Source\n$ErrorActionPreference= \"SilentlyContinue\"\nfile=$0\nargs=\n$ErrorActionPreference= \"Continue\"\n{ PATH=$__op;rm ${__p}/=;rmdir ${__p};} > $null\nemacs -batch -no-site-file -eval \"(let (vc-follow-symlinks) (defun orgstrap--confirm-eval (l _) (not (memq (intern l) '(elisp emacs-lisp)))) (let ((file (pop argv)) enable-local-variables) (find-file-literally file) (end-of-line) (when (eq (char-before) ?\\^m) (let ((coding-system-for-read 'utf-8)) (revert-buffer nil t t)))) (let ((enable-local-eval t) (enable-local-variables :all) (major-mode 'org-mode)) (require 'org) (org-set-regexps-and-options) (hack-local-variables)))\" \"${file}\" -- ${args} \"${@}\"\nexit\n<# powershell open"
+: "set -e \"-C\" \"-e\" \"-e\"\n{ null=/dev/null;} > \"${null:=/dev/null}\"\n{ args=;file=;MyInvocation=;__p=$(mktemp -d);touch ${__p}/=;chmod +x ${__p}/=;__op=$PATH;PATH=${__p}:$PATH;} > \"${null}\"\n$file = $MyInvocation.MyCommand.Source\n{ file=$0;PATH=$__op;rm ${__p}/=;rmdir ${__p};} > \"${null}\"\nemacs -batch -no-site-file -eval \"(let (vc-follow-symlinks) (defun orgstrap--confirm-eval (l _) (not (memq (intern l) '(elisp emacs-lisp)))) (let ((file (pop argv)) enable-local-variables) (find-file-literally file) (end-of-line) (when (eq (char-before) ?\\^m) (let ((coding-system-for-read 'utf-8)) (revert-buffer nil t t)))) (let ((enable-local-eval t) (enable-local-variables :all) (major-mode 'org-mode)) (require 'org) (org-set-regexps-and-options) (hack-local-variables)))\" \"${file}\" -- ${args} \"${@}\"\nexit\n<# powershell open"
 
 #+caption: init helpers
 #+name: orgstrap-init-helper-defuns
@@ -1933,7 +1931,7 @@ If no elvs are found goto `point-max' instead."
   <<orgstrap-shebang-body()>>
   "Shebang block body content.")
 
-(defun orgstrap--add-shebang-block ()
+(defun orgstrap--add-shebang-block (&optional update)
   "Add a shebang block to the current buffer."
   ;; goto correct location
   ;; create empty bash block
@@ -1943,20 +1941,30 @@ If no elvs are found goto `point-max' instead."
   (let ((block-name "orgstrap-shebang")
         (header-args '((eval . never) (results . none) (exports . none))))
     (if (org-babel-find-named-block block-name)
-        (warn "A shebang block already exists. Not adding.")
-      (save-excursion
-        (orgstrap--before-first-dull)
-        (insert "\n#+name: " block-name "\n")
-        (insert "#+begin_src bash")
-        (mapc (lambda (header-arg-value)
-                (insert " :" (symbol-name (car header-arg-value))
-                        " " (symbol-name (cdr header-arg-value))))
-              header-args)
-        (insert "\n#+end_src\n")
-        (orgstrap-update-src-block "orgstrap-shebang" orgstrap--shebang-body)
+        (if update
+            (orgstrap-update-src-block "orgstrap-shebang" orgstrap--shebang-body)
+          (warn "A shebang block already exists. Not adding."))
+      (if update
+          (warn "A shebang block does not exist. Not updating.")
+        (save-excursion
+          (orgstrap--before-first-dull)
+          (insert "\n#+name: " block-name "\n")
+          (insert "#+begin_src bash")
+          (mapc (lambda (header-arg-value)
+                  (insert " :" (symbol-name (car header-arg-value))
+                          " " (symbol-name (cdr header-arg-value))))
+                header-args)
+          (insert "\n#+end_src\n")
+          (orgstrap-update-src-block "orgstrap-shebang" orgstrap--shebang-body)
 
-        (orgstrap--goto-elvs)
-        (insert "# close powershell comment #>\n")))))
+          (orgstrap--goto-elvs)
+          (insert "# close powershell comment #>\n"))))))
+
+(defun orgstrap-update-shebang-block (&optional universal-argument)
+  "Update an existing shebang block. UNIVERSAL-ARGUMENT is ignored."
+  (interactive "P")
+  (ignore universal-argument)
+  (orgstrap--add-shebang-block 'update))
 
 ;; init user facing functions
 
@@ -2151,7 +2159,7 @@ minimal as possible is critical.
 ;; Author: Tom Gillespie
 ;; URL: https://github.com/tgbugs/orgstrap
 ;; Keywords: lisp org org-mode bootstrap
-;; Version: 1.5.1                             (ref:orgstrap.el-version)
+;; Version: 1.5.2                             (ref:orgstrap.el-version)
 ;; Package-Requires: ((emacs "24.4"))
 
 ;;;; License and Commentary
@@ -2429,6 +2437,22 @@ Things that need to be done for a release.
 :PROPERTIES:
 :CUSTOM_ID: changelog
 :END:
+** 1.5.2
+- Update ~orgstrap--shebang-body~ to simplify and improve safety.
+
+  If you use shebang blocks you should update them so that shebang
+  blocks are not affected by leaking environment variables.  See
+  [[./shebang.org]] for a full explication of the operation of each
+  line of shell/powershell code.
+
+- Add ability to update shebang blocks to latest version.
+
+  New interactive function ~orgstrap-update-shebang-block~ updates an
+  existing shebang block to the latest ~orgstrap--shebang-body~.
+  Internally ~orgstrap--add-shebang-block~ was updated to accept an
+  optional ~update~ argument which is used to control whether to add a
+  new or update an existing block.
+
 ** 1.5.1
 - Update ~orgstrap--shebang-body~ so that shebang blocks pass args correctly.
 
